portuguese language added

--- a/index.html
+++ b/index.html
@@ -3,29 +3,36 @@
     <head>
 
         <title>Leonardo Pinheiro Lacerda</title>
-
+        <meta charset="utf-8">
         <link rel="stylesheet" href="style/main.css">
 
+        
     </head>
 
     <body>
         <header id="header">
-            <h1 id="profile">Profile</h1>
-            <h3 id="description">Java developer </h3>
+            <h1 id="profile"></h1>
+            <h3 id="description"></h3>
         </header>
 
         <section id="mainSection">
 
             <div id="aboutme">
-                <h3>About me</h3>
+                <h3 id="aboutmeTitle"></h3>
                 <br/>
-                <p> aqui esta escrito sobre eu</p>
+                <p id="aboutmeText"></p>
             </div>
             <img src="assets/profile.jpg">
             <div id="details">
-                <h3>Details</h3>
+                <h3 id="detalaisTitle"></h3>
                 <br/>
-                <p>detalhes</p>
+                
+                <p class="bold" id="nameTitle"></p>
+                <p id="name"></p>
+                <p class="bold" id="ageTitle"></p>
+                <p id="age"></p>
+                <p class="bold" id="locationTitle"></p>
+                <p id="location"></p>
             </div>
 
         </section>
@@ -46,5 +53,6 @@
                 </a>
             </div>
         </footer>
+        <script src="languages/portuguese.js"></script>
     </body>
 </html>
