skills section implemented

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
         <header id="header">
             <h1 id="profile"></h1>
             <h3 id="description"></h3>
+            <div>
+                <a href="https://www.github.com/LeonardoPinheiroLacerda" target="_blank">
+                    <img src="assets/github.png">
+                </a>
+                <a href="https://www.linkedin.com/in/leonardo-pinheiro-lacerda-343768156/" target="_blank">
+                    <img src="assets/linkedin.png">
+                </a>
+            </div>
         </header>
 
         <section id="mainSection">
@@ -33,7 +41,26 @@
                 <p id="age"></p>
                 <p class="bold" id="locationTitle"></p>
                 <p id="location"></p>
+
             </div>
+
+        </section>
+
+        <section id="skills">
+            <h3 id="skillsTitle"></h3>
+            <br/>
+
+            <div>
+                <img id="html" src="assets/html.png" title="HTML">
+                <img id="css" src="assets/css.png" title="CSS">
+                <img id="js" src="assets/javascript.png" title = "JavaScript">
+                <img id="java" src="assets/java.png" title="Java">
+                <img id="sb" src="assets/springBoot.png" title="Spring Boot">
+                <img id="hibernate" src="assets/hibernate.png" title = "Hibernate">
+                <img id="h2" src="assets/h2.png" title="H2">
+                <img id="postgresql" src="assets/postgresql.png" title="PostgreSQL">
+            </div>
+
 
         </section>
 
@@ -45,10 +72,10 @@
             <p class="footerText">Telefone: (11) 9 5324-8804</p>
             <br/>
             <div>
-                <a href="https://www.github.com/LeonardoPinheiroLacerda">
+                <a href="https://www.github.com/LeonardoPinheiroLacerda" target="_blank">
                     <img src="assets/github.png">
                 </a>
-                <a href="https://www.linkedin.com/in/leonardo-pinheiro-lacerda-343768156/">
+                <a href="https://www.linkedin.com/in/leonardo-pinheiro-lacerda-343768156/" target="_blank">
                     <img src="assets/linkedin.png">
                 </a>
             </div>
