--- a/index.html
+++ b/index.html
@@ -1,96 +1,146 @@
 <!DOCTYPE html>
 <html>
-    <head>
 
-        <title>Leonardo Pinheiro Lacerda</title>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="style/main.css">
-        <link rel="stylesheet" href="style/responsive.css">
-        <script src="languages/portuguese.js"></script>
-        <script src="languages/english.js"></script>
-        <script src="languages/setter.js"></script>
-        <script src="languages/listener.js"></script>
-    </head>
+<head>
+    <title>Leonardo Pinheiro Lacerda</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="i18n/style/langSwitch.css">
+    <link rel="stylesheet" href="style/main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
 
-    <body>
-        <header id="header">
-            <h1 id="profile"></h1>
-            <h3 id="description"></h3>
-            <div>
-                <a href="https://www.github.com/LeonardoPinheiroLacerda" target="_blank">
-                    <img src="assets/github.png">
-                </a>
-                <a href="https://www.linkedin.com/in/leonardo-pinheiro-lacerda-343768156/" target="_blank">
-                    <img src="assets/linkedin.png">
-                </a>
-            </div>
-            <div id="language">
-                <label id="langText"></label>
-                <select id="languageSelect" onchange="changeLanguage()">
-                    <option value="en">English</option>
-                    <option value="pt">Português</option>
-                </select>
-            </div>
-            <br/>
-            <hr/>
-        </header>
+<body class="bg-dark">
 
-        <section id="mainSection">
 
-            <div id="aboutme">
-                <h3 id="aboutmeTitle"></h3>
-                <br/>
-                <p id="aboutmeText"></p>
-            </div>
-            <img src="assets/profile.jpg">
-            <div id="details">
-                <h3 id="detalaisTitle"></h3>
-                <br/>
-                
-                <p class="bold" id="nameTitle"></p>
-                <p id="name"></p>
-                <p class="bold" id="ageTitle"></p>
-                <p id="age"></p>
-                <p class="bold" id="locationTitle"></p>
-                <p id="location"></p>
+
+    <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #e3f2fd;">
+
+
+        <div class="container-fluid px-5">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse m-1" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="#" id="nav-about"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" id="nav-portfolio"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" id="nav-skills"></a>
+                    </li>
+                </ul>
+
 
             </div>
 
-        </section>
+            <form class="d-flex" style="
+                position: absolute;
+                right: 45px;
+                top: 17px;
+            ">
+                <label class="me-2" id="switch-description"></label>
+                <div class="switch-container">
+                    <div class="switch" style="background-image: url(&quot;i18n/assets/united-states.png&quot;);">
+                    </div>
+                </div>
+            </form>
 
-        <section id="skills">
-            <h3 id="skillsTitle"></h3>
-            <br/>
+        </div>
 
-            <div>
-                <img id="html" src="assets/html.png" title="HTML">
-                <img id="css" src="assets/css.png" title="CSS">
-                <img id="js" src="assets/javascript.png" title = "JavaScript">
-                <img id="java" src="assets/java.png" title="Java">
-                <img id="sb" src="assets/springBoot.png" title="Spring Boot">
-                <img id="hibernate" src="assets/hibernate.png" title = "Hibernate">
-                <img id="h2" src="assets/h2.png" title="H2">
-                <img id="postgresql" src="assets/postgresql.png" title="PostgreSQL">
+    </nav>
+
+
+
+
+
+
+
+
+    <footer class="footer mt-auto py-3 bg-secondary">
+
+        <div class="text-light">
+
+            <div class="row justify-content-center w-100">
+
+                <div class="footer-col">
+                    <h3 id="footer-contact"></h3>
+
+                    <p class="ms-2">
+                        <svg class="mb-1" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+                            class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z" />
+                        </svg>
+                        +55 11 9 5324-8804
+                    </p>
+
+                    <p class="ms-2">
+                        <svg class="mb-1" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+                            class="bi bi-envelope-fill" viewBox="0 0 16 16">
+                            <path
+                                d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z" />
+                        </svg>
+                        <a class="text-light" href="mailto:leon.lacerda2015@gmail.com">leon.lacerda2015@gmail.com</a>
+                    </p>
+
+                </div>
+
+                <div class="d-flex justify-content-center p-0 footer-vertical-rule">
+                    <div class="vr"></div>
+                </div>
+
+                <div class="footer-col">
+                    <h3 id="footer-socialmedia"></h3>
+
+                    <p class="ms-2">
+                        <svg class="mb-1" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+                            class="bi bi-github" viewBox="0 0 16 16">
+                            <path
+                                d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
+                        </svg>
+                        <a class="text-light" target="_blank"
+                            href="https://github.com/LeonardoPinheiroLacerda">LeonardoPinheiroLacerda</a>
+                    </p>
+                    <p class="ms-2">
+                        <svg class="mb-1" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+                            class="bi bi-linkedin" viewBox="0 0 16 16">
+                            <path
+                                d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
+                        </svg>
+                        <a class="text-light" target="_blank"
+                            href="https://www.linkedin.com/in/leonardo-pinheiro-lacerda-343768156/">Leonardo Pinheiro
+                            Lacerda</a>
+                    </p>
+                    <p class="ms-2">
+                        <svg class="mb-1" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+                            class="bi bi-whatsapp" viewBox="0 0 16 16">
+                            <path
+                                d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z" />
+                        </svg>
+                        <a class="text-light" target="_blank"
+                            href="https://api.whatsapp.com/send?phone=5511953248804">+55 11 9 5324-8804</a>
+
+                    </p>
+
+                </div>
+
             </div>
 
+        </div>
+    </footer>
 
-        </section>
+    <script src="i18n/script/I18NSwitch.js"></script>
+    <script src="script/english.js"></script>
+    <script src="script/portuguese.js"></script>
+    <script src="script/i18nInstance.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+</body>
 
-        <footer id="footer">
-            <p class="footerText" id="footerBegining"></p>
-            <br/>
-            <p class="footerText" style="font-weight: bold;"></p>
-            <p class="footerText"></p>
-            <p class="footerText"></p>
-            <br/>
-            <div>
-                <a href="https://www.github.com/LeonardoPinheiroLacerda" target="_blank">
-                    <img src="assets/github.png">
-                </a>
-                <a href="https://www.linkedin.com/in/leonardo-pinheiro-lacerda-343768156/" target="_blank">
-                    <img src="assets/linkedin.png">
-                </a>
-            </div>
-        </footer>
-    </body>
 </html>
