--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="#" id="nav-portfolio"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" id="nav-skills"></a>
+                        <a class="nav-link" href="#skills" id="nav-skills"></a>
                     </li>
                 </ul>
 
@@ -94,6 +94,34 @@
                 </div>
 
             </div>
+
+        </section>
+
+        <section class="mt-5 w-100">
+
+            <h3 class="text-center bg-secondary py-2" id="skills">Skills</h3>
+
+            <div class="d-flex align-items-center justify-content-center flex-wrap mb-5">
+
+                <img class="m-1 skill-icon" src='https://raw.githubusercontent.com/devicons/devicon/master/icons/java/java-original-wordmark.svg' title='Java'/>
+                <img class="m-1 skill-icon" src='https://raw.githubusercontent.com/devicons/devicon/master/icons/spring/spring-original-wordmark.svg' title='Spring Boot'/> 
+                <img class="m-1 skill-icon" src='https://raw.githubusercontent.com/devicons/devicon/master/icons/php/php-original.svg' title='PHP'/>
+                <img class="m-1 skill-icon" src='https://raw.githubusercontent.com/devicons/devicon/master/icons/laravel/laravel-plain-wordmark.svg' title='Laravel'/>
+                <img class="m-1 skill-icon" src='https://raw.githubusercontent.com/devicons/devicon/master/icons/postgresql/postgresql-original-wordmark.svg' title='PostGreSQL'/>
+                <img class="m-1 skill-icon" src='https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg' title="HTML5"/>
+                <img class="m-1 skill-icon" src='https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original-wordmark.svg' title='CSS3'/>
+                <img class="m-1 skill-icon" src='https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg' title='JavaScript'/>
+                <img class="m-1 skill-icon" src='https://raw.githubusercontent.com/devicons/devicon/master/icons/bootstrap/bootstrap-plain-wordmark.svg' title='Bootstrap'/>
+                <img class="m-1 skill-icon" src='https://raw.githubusercontent.com/devicons/devicon/master/icons/vscode/vscode-original-wordmark.svg' title='Visual Code'/>
+                <img class="m-1 skill-icon" src='https://raw.githubusercontent.com/devicons/devicon/master/icons/heroku/heroku-original-wordmark.svg' title='Heroku'/>
+                <img class="m-1 skill-icon" src='https://raw.githubusercontent.com/devicons/devicon/master/icons/git/git-original-wordmark.svg' title="Git/Github"/>
+                <img class="m-1 skill-icon" src='https://raw.githubusercontent.com/devicons/devicon/master/icons/docker/docker-original-wordmark.svg' title="Docker"/>
+                <img class="m-1 skill-icon" src='https://raw.githubusercontent.com/devicons/devicon/master/icons/godot/godot-original-wordmark.svg' title="Godot"/>
+                <img class="m-1 skill-icon" src='https://raw.githubusercontent.com/devicons/devicon/master/icons/react/react-original-wordmark.svg' title='React.js'/>
+                <img class="m-1 skill-icon" src='https://raw.githubusercontent.com/devicons/devicon/master/icons/ubuntu/ubuntu-plain-wordmark.svg' title='Ubuntu 20.04'/>
+
+            </div>
+
 
         </section>
 
