Bug do espaçamento

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <header class="bg-secondary p-2 d-flex align-items-center justify-content-around m-0 mb-3" id="header">
             <img src="assets/profile.jpg" class="profile-pic col-2">
             <div class="d-flex flex-column col-10 ">
-                <h1 class="text-center" id="header-profile">Profile</h1>
-                <h5 class="text-center" id="header-desc"></h5>
+                <h1 class="text-center text-light" id="header-profile">Profile</h1>
+                <h5 class="text-center text-light" id="header-desc"></h5>
             </div>
         </header>
 
@@ -99,10 +99,10 @@
 
         <section class="mt-5 w-100">
 
-            <h3 class="text-center bg-secondary py-2" id="portfolio">Portifolio</h3>
+            <h3 class="text-center bg-secondary py-2 text-light" id="portfolio"></h3>
 
 
-            <div class="d-flex align-items-center justify-content-center">
+            <div class="d-flex align-items-center justify-content-center flex-wrap">
                 <div class="card m-2" style="width: 18rem;">
                     <img class="card-img-TOP" src="assets/bongocat.PNG">
                     <div class="card-body">
@@ -159,9 +159,9 @@
 
         <section class="mt-5 w-100">
 
-            <h3 class="text-center bg-secondary py-2" id="skills"></h3>
+            <h3 class="text-center bg-secondary py-2 text-light" id="skills"></h3>
 
-            <div class="d-flex align-items-center justify-content-center flex-wrap mb-5">
+            <div class="d-flex align-items-center justify-content-center flex-wrap">
 
                 <img class="m-1 skill-icon"
                     src='https://raw.githubusercontent.com/devicons/devicon/master/icons/java/java-original-wordmark.svg'
@@ -218,9 +218,7 @@
 
     </main>
 
-
-    <div class="spacer" style="height: 400px;"></div>
-    <footer class="footer mt-auto py-3 bg-secondary position-fixed bottom-0 w-100">
+    <footer class="footer py-3 bg-secondary w-100">
 
         <div class="text-light">
 
