--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 
 <body class="bg-dark">
 
-
-
     <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #e3f2fd;">
 
 
@@ -28,7 +26,7 @@
                         <a class="nav-link" aria-current="page" href="#header" id="nav-profile"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" id="nav-portfolio"></a>
+                        <a class="nav-link" href="#portfolio" id="nav-portfolio"></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#skills" id="nav-skills"></a>
@@ -102,7 +100,7 @@
             <h3 class="text-center bg-secondary py-2 text-light" id="portfolio"></h3>
 
 
-            <div class="d-flex align-items-center justify-content-center flex-wrap">
+            <div class="d-flex align-items-start justify-content-center flex-wrap portfolio">
                 <div class="card m-2" style="width: 18rem;">
                     <img class="card-img-TOP" src="assets/bongocat.PNG">
                     <div class="card-body">
@@ -120,11 +118,12 @@
                 <div class="card m-2" style="width: 18rem;">
                     <img class="card-img-TOP" src="assets/chat.PNG">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the
-                            card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">Talk To Strangers</h5>
+                        <p class="card-text" id="chat-desc"></p>
+                        <div class="d-flex justify-content-center">
+                            <a target="_blank" class="btn btn-primary me-1" href="https://github.com/LeonardoPinheiroLacerda/TalkToStrangersChat" id="chat-source-code"></a>
+                            <a target="_blank" class="btn btn-primary" href="https://talktostrangerschat.herokuapp.com/" id="chat-site"></a>
+                        </div>
                     </div>
                 </div>
 
@@ -133,22 +132,23 @@
                 <div class="card m-2" style="width: 18rem;">
                     <img class="card-img-TOP" src="assets/gameOfLife.PNG">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the
-                            card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">Game Of Life</h5>
+                        <p class="card-text" id="game-of-life-desc"></p>
+                        <div class="d-flex justify-content-center">
+                            <a target="_blank" class="btn btn-primary me-1" href="https://github.com/LeonardoPinheiroLacerda/GameOfLife" id="game-of-life-source-code"></a>
+                            <a target="_blank" class="btn btn-primary" href="https://leonardopinheirolacerda.github.io/GameOfLife/" id="game-of-life-game"></a>
+                        </div>
                     </div>
                 </div>
 
                 <div class="card m-2" style="width: 18rem;">
                     <img class="card-img-TOP" src="assets/i18nEn.PNG">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the
-                            card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">I18N Switch</h5>
+                        <p class="card-text" id="i18n-desc"></p>
+                        <div class="d-flex justify-content-center">
+                            <a target="_blank" class="btn btn-primary me-1" href="https://github.com/LeonardoPinheiroLacerda/I18N-Switch" id="i18n-source-code"></a>
+                        </div>
                     </div>
                 </div>
      
@@ -161,55 +161,71 @@
 
             <h3 class="text-center bg-secondary py-2 text-light" id="skills"></h3>
 
-            <div class="d-flex align-items-center justify-content-center flex-wrap">
+            <div class="d-flex align-items-center justify-content-center flex-wrap px-4 py-2">
 
                 <img class="m-1 skill-icon"
                     src='https://raw.githubusercontent.com/devicons/devicon/master/icons/java/java-original-wordmark.svg'
+                    data-bs-toggle="tooltip" data-bs-placement="top"
                     title='Java' />
                 <img class="m-1 skill-icon"
                     src='https://raw.githubusercontent.com/devicons/devicon/master/icons/spring/spring-original-wordmark.svg'
+                    data-bs-toggle="tooltip" data-bs-placement="top"
                     title='Spring Boot' />
                 <img class="m-1 skill-icon"
                     src='https://raw.githubusercontent.com/devicons/devicon/master/icons/php/php-original.svg'
+                    data-bs-toggle="tooltip" data-bs-placement="top"
                     title='PHP' />
                 <img class="m-1 skill-icon"
                     src='https://raw.githubusercontent.com/devicons/devicon/master/icons/laravel/laravel-plain-wordmark.svg'
+                    data-bs-toggle="tooltip" data-bs-placement="top"
                     title='Laravel' />
                 <img class="m-1 skill-icon"
                     src='https://raw.githubusercontent.com/devicons/devicon/master/icons/postgresql/postgresql-original-wordmark.svg'
+                    data-bs-toggle="tooltip" data-bs-placement="top"
                     title='PostGreSQL' />
                 <img class="m-1 skill-icon"
                     src='https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg'
+                    data-bs-toggle="tooltip" data-bs-placement="top"
                     title="HTML5" />
                 <img class="m-1 skill-icon"
                     src='https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original-wordmark.svg'
+                    data-bs-toggle="tooltip" data-bs-placement="top"
                     title='CSS3' />
                 <img class="m-1 skill-icon"
                     src='https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg'
+                    data-bs-toggle="tooltip" data-bs-placement="top"
                     title='JavaScript' />
                 <img class="m-1 skill-icon"
                     src='https://raw.githubusercontent.com/devicons/devicon/master/icons/bootstrap/bootstrap-plain-wordmark.svg'
+                    data-bs-toggle="tooltip" data-bs-placement="top"
                     title='Bootstrap' />
                 <img class="m-1 skill-icon"
                     src='https://raw.githubusercontent.com/devicons/devicon/master/icons/vscode/vscode-original-wordmark.svg'
+                    data-bs-toggle="tooltip" data-bs-placement="top"
                     title='Visual Code' />
                 <img class="m-1 skill-icon"
                     src='https://raw.githubusercontent.com/devicons/devicon/master/icons/heroku/heroku-original-wordmark.svg'
+                    data-bs-toggle="tooltip" data-bs-placement="top"
                     title='Heroku' />
                 <img class="m-1 skill-icon"
                     src='https://raw.githubusercontent.com/devicons/devicon/master/icons/git/git-original-wordmark.svg'
+                    data-bs-toggle="tooltip" data-bs-placement="top"
                     title="Git/Github" />
                 <img class="m-1 skill-icon"
                     src='https://raw.githubusercontent.com/devicons/devicon/master/icons/docker/docker-original-wordmark.svg'
+                    data-bs-toggle="tooltip" data-bs-placement="top"
                     title="Docker" />
                 <img class="m-1 skill-icon"
                     src='https://raw.githubusercontent.com/devicons/devicon/master/icons/godot/godot-original-wordmark.svg'
+                    data-bs-toggle="tooltip" data-bs-placement="top"
                     title="Godot" />
                 <img class="m-1 skill-icon"
                     src='https://raw.githubusercontent.com/devicons/devicon/master/icons/react/react-original-wordmark.svg'
+                    data-bs-toggle="tooltip" data-bs-placement="top"
                     title='React.js' />
                 <img class="m-1 skill-icon"
                     src='https://raw.githubusercontent.com/devicons/devicon/master/icons/ubuntu/ubuntu-plain-wordmark.svg'
+                    data-bs-toggle="tooltip" data-bs-placement="top"
                     title='Ubuntu 20.04' />
 
             </div>
@@ -298,6 +314,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+    <script>
+        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+        return new bootstrap.Tooltip(tooltipTriggerEl)
+        })
+    </script>
 </body>
 
 </html>
