--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
         <div class="text-light">
 
-            <div class="row justify-content-center w-100">
+            <div class="row justify-content-center w-100" id="footer-content">
 
                 <div class="footer-col">
                     <h3 id="footer-contact"></h3>
@@ -263,7 +263,7 @@
 
                 </div>
 
-                <div class="d-flex justify-content-center p-0 footer-vertical-rule">
+                <div class="d-flex justify-content-center p-0" id="footer-vertical-rule">
                     <div class="vr"></div>
                 </div>
 
