Spring security project

--- a/index.html
+++ b/index.html
@@ -115,6 +115,19 @@
                 </div>
 
                 <div class="card m-2" style="width: 18rem;" data-aos="fade-up">
+                    <img class="card-img-TOP" src="assets/springBootJWTDemo.PNG">
+                    <div class="card-body">
+                        <h5 class="card-title">Spring Boot JWT Demo</h5>
+                        <p class="card-text" id="jwt-desc"></p>
+                    
+                        <div class="d-flex justify-content-center">
+                            <a target="_blank" class="btn btn-primary me-1" href="https://github.com/LeonardoPinheiroLacerda/Spring-Security-JWT-Demo" id="jwt-source-code"></a>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="card m-2" style="width: 18rem;" data-aos="fade-up">
                     <img class="card-img-TOP" src="assets/chat.PNG">
                     <div class="card-body">
                         <h5 class="card-title">Talk To Strangers</h5>
