--- a/index.html
+++ b/index.html
@@ -123,6 +123,20 @@
                 </div>
 
                 <div class="card m-2" style="width: 18rem;" data-aos="fade-up">
+                    <img class="card-img-TOP" src="assets/animepoll.PNG">
+                    <div class="card-body">
+                        <h5 class="card-title">Anime Poll</h5>
+                        <p class="card-text" data-i18n="animepoll-desc"></p>
+                    
+                        <div class="d-flex justify-content-center">
+                            <a target="_blank" class="btn btn-primary me-1" href="https://github.com/LeonardoPinheiroLacerda/AnimePoll" data-i18n="source-code"></a>
+                            <a target="_blank" class="btn btn-primary" href="https://anime-poll.herokuapp.com/" data-i18n="website"></a>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="card m-2" style="width: 18rem;" data-aos="fade-up">
                     <img class="card-img-TOP" src="assets/springBootJWTDemo.PNG">
                     <div class="card-body">
                         <h5 class="card-title">Spring Boot JWT Demo</h5>
@@ -176,7 +190,7 @@
                     <img class="card-img-TOP" src="assets/gameOfLife.PNG">
                     <div class="card-body">
                         <h5 class="card-title">Game Of Life</h5>
-                        <p class="card-text" data-i18n="website"></p>
+                        <p class="card-text" data-i18n="game-of-life-desc"></p>
                         <div class="d-flex justify-content-center">
                             <a target="_blank" class="btn btn-primary me-1" href="https://github.com/LeonardoPinheiroLacerda/GameOfLife" data-i18n="source-code"></a>
                             <a target="_blank" class="btn btn-primary" href="https://leonardopinheirolacerda.github.io/GameOfLife/" data-i18n="website"></a>
