Update do projeto de segurança

--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
                 <div class="card m-2" style="width: 18rem;" data-aos="fade-up">
                     <img class="card-img-TOP" src="assets/springBootJWTDemo.PNG">
                     <div class="card-body">
-                        <h5 class="card-title">Spring Boot JWT Demo</h5>
+                        <h5 class="card-title">Spring Boot Demo</h5>
                         <p class="card-text" data-i18n="jwt-desc"></p>
                     
                         <div class="d-flex justify-content-center">
-                            <a target="_blank" class="btn btn-primary me-1" href="https://github.com/LeonardoPinheiroLacerda/Spring-Security-JWT-Demo" data-i18n="source-code"></a>
+                            <a target="_blank" class="btn btn-primary me-1" href="https://github.com/LeonardoPinheiroLacerda/Spring-security-demo" data-i18n="source-code"></a>
                         </div>
 
                     </div>
