--- a/index.html
+++ b/index.html
@@ -271,11 +271,16 @@
                     data-bs-toggle="tooltip" data-bs-placement="top"
                     data-aos="fade-up"
                     title='CSS3' />
-                <img class="m-1 skill-icon"
+                    <img class="m-1 skill-icon"
                     src='https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg'
                     data-bs-toggle="tooltip" data-bs-placement="top"
                     data-aos="fade-up"
                     title='JavaScript' />
+                <img class="m-1 skill-icon"
+                    src='https://raw.githubusercontent.com/devicons/devicon/master/icons/nodejs/nodejs-original.svg'
+                    data-bs-toggle="tooltip" data-bs-placement="top"
+                    data-aos="fade-up"
+                    title='Node.js' />
                 <img class="m-1 skill-icon"
                     src='https://raw.githubusercontent.com/devicons/devicon/master/icons/bootstrap/bootstrap-plain-wordmark.svg'
                     data-bs-toggle="tooltip" data-bs-placement="top"
@@ -396,6 +401,7 @@
     </footer>
 
     <script src="https://unpkg.com/i18n-switch@2.0.1/script/I18NSwitch.js"></script>
+    <script src="script/age.js"></script>
     <script src="script/english.js"></script>
     <script src="script/portuguese.js"></script>
     <script src="script/i18nInstance.js"></script>
