Correção de formato das imagens

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
             <div class="d-flex align-items-start justify-content-center flex-wrap portfolio">
                 <div class="card m-2" style="width: 18rem;" data-aos="fade-up">
-                    <img class="card-img-TOP" src="assets/taskmanager.PNG">
+                    <img class="card-img-TOP" src="assets/taskmanager.png">
                     <div class="card-body">
                         <h5 class="card-title">Task Manager</h5>
                         <p class="card-text" data-i18n="task-manager-desc"></p>
@@ -123,7 +123,7 @@
                 </div>
 
                 <div class="card m-2" style="width: 18rem;" data-aos="fade-up">
-                    <img class="card-img-TOP" src="assets/animepoll.PNG">
+                    <img class="card-img-TOP" src="assets/animepoll.png">
                     <div class="card-body">
                         <h5 class="card-title">Anime Poll</h5>
                         <p class="card-text" data-i18n="animepoll-desc"></p>
@@ -137,7 +137,7 @@
                 </div>
 
                 <div class="card m-2" style="width: 18rem;" data-aos="fade-up">
-                    <img class="card-img-TOP" src="assets/springBootJWTDemo.PNG">
+                    <img class="card-img-TOP" src="assets/springBootJWTDemo.png">
                     <div class="card-body">
                         <h5 class="card-title" data-i18n="jwt-new-name">Spring Boot Demo - Improved, and using new feature</h5>
                         <p class="card-text" data-i18n="jwt-desc-new"></p>
@@ -150,7 +150,7 @@
                 </div>
 
                 <div class="card m-2" style="width: 18rem;" data-aos="fade-up">
-                    <img class="card-img-TOP" src="assets/myPokedex.PNG">
+                    <img class="card-img-TOP" src="assets/myPokedex.png">
                     <div class="card-body">
                         <h5 class="card-title">MyPokedex</h5>
                         <p class="card-text" data-i18n="pokedex-desc"></p>
@@ -164,7 +164,7 @@
                 </div>
 
                 <div class="card m-2" style="width: 18rem;" data-aos="fade-up">
-                    <img class="card-img-TOP" src="assets/springBootJWTDemo.PNG">
+                    <img class="card-img-TOP" src="assets/springBootJWTDemo.png">
                     <div class="card-body">
                         <h5 class="card-title">Spring Boot Demo - DEPRECATED</h5>
                         <p class="card-text" data-i18n="jwt-desc"></p>
@@ -177,7 +177,7 @@
                 </div>
 
                 <div class="card m-2" style="width: 18rem;" data-aos="fade-up">
-                    <img class="card-img-TOP" src="assets/i18nEn.PNG">
+                    <img class="card-img-TOP" src="assets/i18nEn.png">
                     <div class="card-body">
                         <h5 class="card-title">I18N Switch</h5>
                         <p class="card-text" data-i18n="i18n-desc"></p>
@@ -188,7 +188,7 @@
                 </div>
 
                 <div class="card m-2" style="width: 18rem;" data-aos="fade-up">
-                    <img class="card-img-TOP" src="assets/chat.PNG">
+                    <img class="card-img-TOP" src="assets/chat.png">
                     <div class="card-body">
                         <h5 class="card-title">Talk To Strangers</h5>
                         <p class="card-text" data-i18n="chat-desc"></p>
@@ -200,7 +200,7 @@
                 </div>
 
                 <div class="card m-2" style="width: 18rem;" data-aos="fade-up">
-                    <img class="card-img-TOP" src="assets/bongocat.PNG">
+                    <img class="card-img-TOP" src="assets/bongocat.png">
                     <div class="card-body">
                         <h5 class="card-title">Bongo Cat</h5>
                         <p class="card-text" data-i18n="bongo-cat-desc"></p>
@@ -214,7 +214,7 @@
                 </div>                
 
                 <div class="card m-2" style="width: 18rem;" data-aos="fade-up">
-                    <img class="card-img-TOP" src="assets/gameOfLife.PNG">
+                    <img class="card-img-TOP" src="assets/gameOfLife.png">
                     <div class="card-body">
                         <h5 class="card-title">Game Of Life</h5>
                         <p class="card-text" data-i18n="game-of-life-desc"></p>
