--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     
                         <div class="d-flex justify-content-center">
                             <a target="_blank" class="btn btn-primary me-1" href="https://github.com/LeonardoPinheiroLacerda/AnimePoll" data-i18n="source-code"></a>
-                            <a target="_blank" class="btn btn-primary" href="https://anime-poll.herokuapp.com/" data-i18n="website"></a>
+                            <!-- <a target="_blank" class="btn btn-primary" href="https://anime-poll.herokuapp.com/" data-i18n="website"></a> -->
                         </div>
 
                     </div>
@@ -194,7 +194,7 @@
                         <p class="card-text" data-i18n="chat-desc"></p>
                         <div class="d-flex justify-content-center">
                             <a target="_blank" class="btn btn-primary me-1" href="https://github.com/LeonardoPinheiroLacerda/TalkToStrangersChat" data-i18n="source-code"></a>
-                            <a target="_blank" class="btn btn-primary" href="https://talktostrangerschat.herokuapp.com/" data-i18n="website"></a>
+                            <!-- <a target="_blank" class="btn btn-primary" href="https://talktostrangerschat.herokuapp.com/" data-i18n="website"></a> -->
                         </div>
                     </div>
                 </div>
@@ -282,6 +282,16 @@
                     data-aos="fade-up"
                     title='Node.js' />
                 <img class="m-1 skill-icon"
+                    src='https://raw.githubusercontent.com/devicons/devicon/master/icons/express/express-original-wordmark.svg'
+                    data-bs-toggle="tooltip" data-bs-placement="top"
+                    data-aos="fade-up"
+                    title='Express' />
+                <img class="m-1 skill-icon"
+                    src='https://raw.githubusercontent.com/devicons/devicon/master/icons/sequelize/sequelize-original.svg'
+                    data-bs-toggle="tooltip" data-bs-placement="top"
+                    data-aos="fade-up"
+                    title='Sequelize' />
+                <img class="m-1 skill-icon"
                     src='https://raw.githubusercontent.com/devicons/devicon/master/icons/bootstrap/bootstrap-plain-wordmark.svg'
                     data-bs-toggle="tooltip" data-bs-placement="top"
                     data-aos="fade-up"
@@ -291,11 +301,11 @@
                     data-bs-toggle="tooltip" data-bs-placement="top"
                     data-aos="fade-up"
                     title='Visual Code' />
-                <img class="m-1 skill-icon"
+                <!-- <img class="m-1 skill-icon"
                     src='https://raw.githubusercontent.com/devicons/devicon/master/icons/heroku/heroku-original-wordmark.svg'
                     data-bs-toggle="tooltip" data-bs-placement="top"
                     data-aos="fade-up"
-                    title='Heroku' />
+                    title='Heroku' /> -->
                 <img class="m-1 skill-icon"
                     src='https://raw.githubusercontent.com/devicons/devicon/master/icons/git/git-original-wordmark.svg'
                     data-bs-toggle="tooltip" data-bs-placement="top"
