Atualizando Descrição do profile

--- a/index.html
+++ b/index.html
@@ -92,15 +92,15 @@
             </div>
 
             
-            
-            <div class="row d-flex align-items-center justify-content-center mt-4" data-aos="fade-up">
+            <!-- TODO: Update resume -->
+            <!-- <div class="row d-flex align-items-center justify-content-center mt-4" data-aos="fade-up">
                 <a href="https://drive.google.com/file/d/1GgsQtMqD4jmymhLn9zMSufn3_d7ZOzDx/view?usp=sharing" target="_blank" class="btn btn-primary w-auto d-flex align-items-center justify-content-center" >
                     <svg xmlns="http://www.w3.org/2000/svg" class="download-svg me-2" fill="currentColor" class="bi bi-file-earmark-arrow-down-fill" viewBox="0 0 16 16">
                         <path d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0zM9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1zm-1 4v3.793l1.146-1.147a.5.5 0 0 1 .708.708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 0 1 .708-.708L7.5 11.293V7.5a.5.5 0 0 1 1 0z"/>
                     </svg> 
                     <label data-i18n="download-resume"></label>
                 </a>
-            </div>
+            </div> -->
         </section>
 
         <section class="mt-5 w-100">
@@ -301,11 +301,11 @@
                     data-bs-toggle="tooltip" data-bs-placement="top"
                     data-aos="fade-up"
                     title='Visual Code' />
-                <!-- <img class="m-1 skill-icon"
+                <img class="m-1 skill-icon"
                     src='https://raw.githubusercontent.com/devicons/devicon/master/icons/heroku/heroku-original-wordmark.svg'
                     data-bs-toggle="tooltip" data-bs-placement="top"
                     data-aos="fade-up"
-                    title='Heroku' /> -->
+                    title='Heroku' />
                 <img class="m-1 skill-icon"
                     src='https://raw.githubusercontent.com/devicons/devicon/master/icons/git/git-original-wordmark.svg'
                     data-bs-toggle="tooltip" data-bs-placement="top"
@@ -326,6 +326,10 @@
                     data-bs-toggle="tooltip" data-bs-placement="top"
                     data-aos="fade-up"
                     title='React.js' />
+                <img class="m-1 skill-icon"
+                    src='https://raw.githubusercontent.com/devicons/devicon/master/icons/nginx/nginx-original.svg'
+                    data-bs-toggle="tooltip" data-bs-placement="top" data-aos="fade-up"
+                    title='Nginx' />
                 <img class="m-1 skill-icon"
                     src='https://raw.githubusercontent.com/devicons/devicon/master/icons/ubuntu/ubuntu-plain-wordmark.svg'
                     data-bs-toggle="tooltip" data-bs-placement="top" data-aos="fade-up"
